--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 DATABASE_URL = "mongodb+srv://user:user@cluster0.pwo4e0z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET = "12345"
+PASS_CODE =tzkx sakx wixz gavz
