--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 DATABASE_URL = "mongodb+srv://user:user@cluster0.pwo4e0z.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 JWT_SECRET = "12345"
 PASS_CODE =tzkx sakx wixz gavz
+PORT=3000
+LOCAL_ORIGIN=http://localhost:3001
+PROD_ORIGIN=https://university-web-app.vercel.app/
+NODE_ENV=production
